// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputWithIconButton render with onAction prop 1`] = `
.c1 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  margin-top: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  border-radius: 56px;
  display: inline-block;
  height: 70px;
  line-height: 1;
  padding-left: 56px;
  padding-right: 56px;
  text-transform: capitalize;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  outline: 0;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #f8f9fa;
  background-color: #0588cb;
  border: none;
  text-align: center;
  -webkit-letter-spacing: .5px;
  -moz-letter-spacing: .5px;
  -ms-letter-spacing: .5px;
  letter-spacing: .5px;
  z-index: 1;
  -webkit-transition: .2s ease-out;
  transition: .2s ease-out;
  cursor: pointer;
}

.c6:hover {
  border: none;
  background-color: #37a6ed;
}

.c6:active {
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
  border: none;
  background-color: #0f77b8;
}

.c5 {
  padding-left: 16px;
  padding-right: 16px;
  font-size: 28px;
}

.c3 {
  font-size: 16px;
  font-family: inherit;
  display: 'block';
  vertical-align: 'middle';
  background-color: transparent;
  border: none;
  border-bottom: 1px solid #f1f3f5;
  border-radius: 0;
  margin: 0;
  padding: 0;
  outline: none;
  width: 100%;
  height: 32px;
  box-shadow: none;
  box-sizing: content-box;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c3:hover:not([readonly]) {
  border-bottom: 1px solid #dee2e6;
}

.c3:focus:not([readonly]) {
  border-bottom: 1px solid #0588cb;
}

.c4 {
  padding-left: 16px;
  padding-right: 16px;
  font-size: 28px;
  border-radius: none;
  color: #adb5bd;
  background-color: transparent;
}

.c4:hover {
  background-color: transparent;
  color: #ced4da;
}

.c4:active {
  background-color: transparent;
  color: #868e96;
}

<InputWithIconButton
  error={null}
  fontSize={1}
  icon={<div />}
  onAction={[Function]}
  type="text"
>
  <div>
    <Flex>
      <Box
        className="c0"
      >
        <div
          className="c0 c1"
        >
          <Box
            mt={2}
            w={0.9}
          >
            <div
              className="c2"
            >
              <Input
                error={null}
                fontSize={1}
                icon={<div />}
                onAction={[Function]}
                onChange={[Function]}
                rows={3}
                type="text"
              >
                <div>
                  <Input__StyledInput
                    error={null}
                    fontSize={1}
                    icon={<div />}
                    onAction={[Function]}
                    onChange={[Function]}
                    rows={3}
                    type="text"
                  >
                    <input
                      className="c3"
                      fontSize={1}
                      icon={<div />}
                      onChange={[Function]}
                      rows={3}
                      type="text"
                    />
                  </Input__StyledInput>
                </div>
              </Input>
            </div>
          </Box>
          <Box
            w={0.1}
          >
            <div
              className="c1"
            >
              <IconButton
                fontSize={3}
                icon={<div />}
                onClick={[Function]}
                pl={3}
                pr={3}
              >
                <IconButton__StyledIconButton
                  fontSize={3}
                  icon={<div />}
                  onClick={[Function]}
                  pl={3}
                  pr={3}
                >
                  <Button
                    border={2}
                    className="c4"
                    fontSize={3}
                    hollow={false}
                    icon={<div />}
                    inverted={false}
                    onClick={[Function]}
                    pl={3}
                    pr={3}
                  >
                    <Button__StyledButton
                      border={2}
                      className="c4 c5"
                      fontSize={3}
                      hollow={false}
                      icon={<div />}
                      inverted={false}
                      onClick={[Function]}
                      pl={3}
                      pr={3}
                    >
                      <button
                        className="c4 c5 c6"
                        fontSize={3}
                        icon={<div />}
                        onClick={[Function]}
                      >
                        <div />
                      </button>
                    </Button__StyledButton>
                  </Button>
                </IconButton__StyledIconButton>
              </IconButton>
            </div>
          </Box>
        </div>
      </Box>
    </Flex>
  </div>
</InputWithIconButton>
`;

exports[`InputWithIconButton renders 1`] = `
.c1 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  margin-top: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  border-radius: 56px;
  display: inline-block;
  height: 70px;
  line-height: 1;
  padding-left: 56px;
  padding-right: 56px;
  text-transform: capitalize;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
  outline: 0;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #f8f9fa;
  background-color: #0588cb;
  border: none;
  text-align: center;
  -webkit-letter-spacing: .5px;
  -moz-letter-spacing: .5px;
  -ms-letter-spacing: .5px;
  letter-spacing: .5px;
  z-index: 1;
  -webkit-transition: .2s ease-out;
  transition: .2s ease-out;
  cursor: pointer;
}

.c6:hover {
  border: none;
  background-color: #37a6ed;
}

.c6:active {
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
  border: none;
  background-color: #0f77b8;
}

.c5 {
  padding-left: 16px;
  padding-right: 16px;
  font-size: 28px;
}

.c3 {
  font-size: 16px;
  font-family: inherit;
  display: 'block';
  vertical-align: 'middle';
  background-color: transparent;
  border: none;
  border-bottom: 1px solid #f1f3f5;
  border-radius: 0;
  margin: 0;
  padding: 0;
  outline: none;
  width: 100%;
  height: 32px;
  box-shadow: none;
  box-sizing: content-box;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c3:hover:not([readonly]) {
  border-bottom: 1px solid #dee2e6;
}

.c3:focus:not([readonly]) {
  border-bottom: 1px solid #0588cb;
}

.c4 {
  padding-left: 16px;
  padding-right: 16px;
  font-size: 28px;
  border-radius: none;
  color: #adb5bd;
  background-color: transparent;
}

.c4:hover {
  background-color: transparent;
  color: #ced4da;
}

.c4:active {
  background-color: transparent;
  color: #868e96;
}

<InputWithIconButton
  error={null}
  fontSize={1}
  icon={<div />}
  type="text"
>
  <div>
    <Flex>
      <Box
        className="c0"
      >
        <div
          className="c0 c1"
        >
          <Box
            mt={2}
            w={0.9}
          >
            <div
              className="c2"
            >
              <Input
                error={null}
                fontSize={1}
                icon={<div />}
                onChange={[Function]}
                rows={3}
                type="text"
              >
                <div>
                  <Input__StyledInput
                    error={null}
                    fontSize={1}
                    icon={<div />}
                    onChange={[Function]}
                    rows={3}
                    type="text"
                  >
                    <input
                      className="c3"
                      fontSize={1}
                      icon={<div />}
                      onChange={[Function]}
                      rows={3}
                      type="text"
                    />
                  </Input__StyledInput>
                </div>
              </Input>
            </div>
          </Box>
          <Box
            w={0.1}
          >
            <div
              className="c1"
            >
              <IconButton
                fontSize={3}
                icon={<div />}
                pl={3}
                pr={3}
              >
                <IconButton__StyledIconButton
                  fontSize={3}
                  icon={<div />}
                  pl={3}
                  pr={3}
                >
                  <Button
                    border={2}
                    className="c4"
                    fontSize={3}
                    hollow={false}
                    icon={<div />}
                    inverted={false}
                    pl={3}
                    pr={3}
                  >
                    <Button__StyledButton
                      border={2}
                      className="c4 c5"
                      fontSize={3}
                      hollow={false}
                      icon={<div />}
                      inverted={false}
                      pl={3}
                      pr={3}
                    >
                      <button
                        className="c4 c5 c6"
                        fontSize={3}
                        icon={<div />}
                      >
                        <div />
                      </button>
                    </Button__StyledButton>
                  </Button>
                </IconButton__StyledIconButton>
              </IconButton>
            </div>
          </Box>
        </div>
      </Box>
    </Flex>
  </div>
</InputWithIconButton>
`;
